updates the use-conda directive and repo docs

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,5 +2,6 @@ include atlas/Snakefile
 include atlas/rules/assemble.snakefile
 include atlas/rules/annotate.snakefile
 include atlas/rules/download.snakefile
+include atlas/rules/initialize_checkm.py
 include atlas/envs/optional_genome_binning.yaml
 include atlas/envs/required_packages.yaml
