--- a/atlas/envs/optional_genome_binning.yaml
+++ b/atlas/envs/optional_genome_binning.yaml
@@ -1,17 +1,18 @@
 channels:
     - bioconda
-    - r
-    - defaults
     - conda-forge
+    - defaults
+    - r
 dependencies:
     - python=2.7
     - checkm-genome
     - dendropy >=4.0.0
     - hmmer
     - matplotlib >=1.3.1
-    - maxbin2
+    - maxbin2=2.2.1=r3.3.2_1
     - numpy >=1.8.0
     - scipy >=0.9.0
     - pplacer
     - pysam >=0.8.3
+    - samtools=1.3.1
     - screamingbackpack >=0.2.333
