--- a/atlas/envs/optional_genome_binning.yaml
+++ b/atlas/envs/optional_genome_binning.yaml
@@ -5,14 +5,14 @@ channels:
     - r
 dependencies:
     - python=2.7
-    - checkm-genome
+    - checkm-genome=1.0.7
     - dendropy >=4.0.0
-    - hmmer
+    - hmmer=3.1b2
     - matplotlib >=1.3.1
     - maxbin2=2.2.1=r3.3.2_1
     - numpy >=1.8.0
     - scipy >=0.9.0
-    - pplacer
+    - pplacer=1.1.alpha17
     - pysam >=0.8.3
     - samtools=1.3.1
     - screamingbackpack >=0.2.333
