add memory limits for assembly, memmory is in GB

--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -5,7 +5,7 @@ import tempfile
 
 
 # global defaults
-JAVA_MEM = "32g"
+JAVA_MEM = 32
 PREPROCESS_ADAPTER_MIN_K = 8
 PREPROCESS_MINIMUM_BASE_QUALITY = 10
 PREPROCESS_ALLOWABLE_KMER_MISMATCHES = 1
