added merge pair function

--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -14,6 +14,9 @@ QTRIM = "rl"
 PREPROCESS_MINIMUM_PASSING_READ_LENGTH = 51
 PREPROCESS_MINIMUM_BASE_FREQUENCY = 0.05
 
+MERGING_EXTEND2 = 50
+MERGING_K = 62
+
 CONTAMINANT_MAX_INDEL = 20
 CONTAMINANT_MIN_RATIO = 0.65
 CONTAMINANT_MINIMUM_HITS = 1
