Draft of paired end workflow using interleaved and ingleton file

--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -14,6 +14,7 @@ QTRIM = "rl"
 PREPROCESS_MINIMUM_PASSING_READ_LENGTH = 51
 PREPROCESS_MINIMUM_BASE_FREQUENCY = 0.05
 
+MERGING_FLAGS="ecct vstrict"
 MERGING_EXTEND2 = 50
 MERGING_K = 62
 
