--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -28,7 +28,8 @@ NORMALIZATION_KMER_LENGTH = 21
 NORMALIZATION_TARGET_DEPTH = 100
 NORMALIZATION_MINIMUM_KMERS = 15
 
-MEGAHIT_MEMORY = 0.90
+ASSEMBLY_MEMORY = 50
+ASSEMBLY_THREADS = 8
 MEGAHIT_MIN_COUNT = 2
 MEGAHIT_K_MIN = 21
 MEGAHIT_K_MAX = 121
@@ -125,6 +126,7 @@ def update_config_file_paths(config):
 
 CONDAENV = get_conda_envs_dir()
 
+localrules: all
 
 if config.get("workflow", "complete") == "complete":
     config = update_config_file_paths(config)
