--- a/atlas/envs/optional_genome_binning.yaml
+++ b/atlas/envs/optional_genome_binning.yaml
@@ -4,11 +4,11 @@ channels:
     - defaults
     - r
 dependencies:
+    - bzip2
     - python=2.7
     - checkm-genome=1.0.7
     - dendropy >=4.0.0
     - hmmer=3.1b2
-    - htslib=1.6
     - matplotlib >=1.3.1
     - maxbin2=2.2.1=r3.3.2_1
     - numpy >=1.8.0
