--- a/atlas/envs/optional_genome_binning.yaml
+++ b/atlas/envs/optional_genome_binning.yaml
@@ -6,6 +6,7 @@ channels:
 dependencies:
     - python=2.7
     - checkm-genome=1.0.7
+    - prodigal >=2.6.1
     - dendropy >=4.0.0
     - hmmer=3.1b2
     - matplotlib >=1.3.1
