--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -9,7 +9,8 @@ from default_values import *
 
 # required snakemake version
 min_version("4.3")
-
+shell.executable("/bin/bash")
+shell.prefix("set -o pipefail; ")
 
 def get_conda_envs_dir():
     if config.get("yaml_dir"):
