--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,3 +6,4 @@ include atlas/rules/initialize_checkm.py
 include atlas/rules/qc.snakefile
 include atlas/envs/optional_genome_binning.yaml
 include atlas/envs/required_packages.yaml
+include atlas/template_config.yaml
