--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,4 +6,5 @@ include atlas/rules/initialize_checkm.py
 include atlas/rules/qc.snakefile
 include atlas/envs/optional_genome_binning.yaml
 include atlas/envs/required_packages.yaml
+include atlas/envs/report.yaml
 include atlas/template_config.yaml
