--- a/atlas/envs/report.yaml
+++ b/atlas/envs/report.yaml
@@ -2,10 +2,10 @@ channels:
     - bioconda
     - conda-forge
     - defaults
-    - liulab # for cufflinks
 dependencies:
     - python=3.6
     - pandas=0.20.3
     - plotly=2.2.2
-    - cufflinks=2.2.1
-
+    - pip
+    - pip:
+      - cufflinks==0.12.1
