--- a/atlas/envs/report.yaml
+++ b/atlas/envs/report.yaml
@@ -6,6 +6,7 @@ dependencies:
     - python=3.6
     - pandas=0.20.3
     - plotly=2.2.2
+    - ipython=6.2.1
     - pip
     - pip:
       - cufflinks==0.12.1
