changed style sheet

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,3 +9,4 @@ include atlas/envs/required_packages.yaml
 include atlas/envs/report.yaml
 include atlas/template_config.yaml
 include atlas/report/qc_report.py
+include atlas/report/report.css
