add swithc in Snakefile for combine contigs

--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -156,13 +156,19 @@ elif config.get("workflow", "complete") == "complete":
         input:
             expand("{sample}/sequence_quality_control/finished_QC",sample=SAMPLES),
             "finished_QC",
+#            get_bin_summary_files(config.get("perform_genome_binning", True), SAMPLES),  # this produces an error when genome binning is not active
+            #expand("{sample}/{sample}_annotations.txt", sample=SAMPLES),
+            assembly= ["Combined_contigs_done", 'finished_assembly'] if config.get('combine_contigs',False) else  'finished_assembly'
+
+    rule check_assembly:
+        input:
             expand("{sample}/assembly/contig_stats/prefilter_contig_stats.txt",
                 sample=SAMPLES),
             expand("{sample}/assembly/contig_stats/final_contig_stats.txt",
-                sample=SAMPLES),
-#            get_bin_summary_files(config.get("perform_genome_binning", True), SAMPLES),  # this produces an error when genome binning is not active
-            #expand("{sample}/{sample}_annotations.txt", sample=SAMPLES),
-            "Combined_contigs_done"
+                sample=SAMPLES)
+        output:
+            touch('finished_assembly')
+
 
 
     include: "rules/assemble.snakefile"
