corrected bug in config update

--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -9,6 +9,8 @@ from default_values import *
 # get default values and update them with values specified in config file
 default_config = make_default_config()
 update_config(default_config, config)
+config = default_config
+
 
 # required snakemake version
 min_version("4.3")
