added read quality report

--- a/atlas/envs/report.yaml
+++ b/atlas/envs/report.yaml
@@ -7,6 +7,7 @@ dependencies:
     - pandas=0.20.3
     - plotly=2.2.2
     - ipython=6.2.1
+    - seaborn=0.8
     - pip
     - pip:
       - cufflinks==0.12.1
