--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -138,7 +138,7 @@ if config.get("workflow", "complete") == "qc":
     MULTIFILE_FRACTIONS = ['R1', 'R2', 'se'] if PAIRED_END else ['se']
     RAW_INPUT_FRACTIONS = ['R1', 'R2'] if PAIRED_END else ['se']
 
-    REPORTS= ["reports/qc_report.html"]
+    REPORTS= ["reports/QC_report.html"]
 
     rule all:
         input:
@@ -156,7 +156,7 @@ elif config.get("workflow", "complete") == "complete":
     MULTIFILE_FRACTIONS = ['R1', 'R2', 'se'] if PAIRED_END else ['se']
     RAW_INPUT_FRACTIONS = ['R1', 'R2'] if PAIRED_END else ['se']
 
-    REPORTS= ["reports/qc_report.html","reports/assembly_report.html"]
+    REPORTS= ["reports/QC_report.html","reports/assembly_report.html"]
 
     if config.get("perform_genome_binning", True): REPORTS += ["reports/bin_report.html"]
 
